--- a/reports/dependentVar.Rmd
+++ b/reports/dependentVar.Rmd
@@ -88,8 +88,66 @@ hgtpts25832 <- hgtpts %>%
          hgt_assume = as.logical(replace_na(hgt_assume, 0))) %>% 
   filter(hgt >= 30 | is.na(hgt)) %>% 
   select(species, locality, count, hgt, hgt_assume)
+```
 
-saveRDS(hgtpts25832, here("output","dependentVar.rds"))
+# Height stratification
+
+```{r}
+hgtpts25832 %>% 
+  group_by(species) %>% 
+  uncount(weights = count) %>% 
+  summarise(lowerquartilehgt = quantile(hgt, 0.25, na.rm = TRUE),
+            upperquartilehgt = quantile(hgt, 0.75, na.rm = TRUE))
+
+classlimits <- tribble(
+  ~class, ~lower, ~upper,
+       1,     30,     80,
+       2,     80,    200,
+       3,    200,  10000
+)
+```
+
+# Height assignment
+
+```{r}
+assign_hgts_singleseed <- function(hgtpts, seed) {
+  pool <- na.omit(hgtpts$hgt)
+  set.seed(seed)
+  mutate(hgtpts,
+         randomseed = seed,
+         hgt_random = sample(pool, size = nrow(hgtpts), replace = TRUE),
+         hgt_assign = is.na(hgt),
+         hgt = ifelse(hgt_assign, hgt_random, hgt)) %>% 
+    select(species, randomseed, locality, hgt, hgt_assume, hgt_assign, geometry)
+}
+
+nrseeds <- 5
+assign_heights <- function(hgtptssplit) {
+  map(seq_len(nrseeds), ~ assign_hgts_singleseed(hgtptssplit, .)) %>% 
+    bind_rows()
+}
+
+hgtptssplit <- hgtpts25832 %>% 
+  uncount(weights = count) %>%
+  group_by(species, locality) %>% 
+  group_split()
+
+DV <- map(hgtptssplit, assign_heights) %>% 
+  bind_rows() %>% 
+  mutate(hgtclass = case_when(
+    hgt < classlimits$upper[1] ~ classlimits$class[1],
+    hgt >= classlimits$lower[2] & hgt < classlimits$upper[2] ~ classlimits$class[2],
+    hgt >= classlimits$lower[3] ~ classlimits$class[3]),
+    .before = locality)
+
+DV %>%
+  mutate(file=paste(species, locality, sep = "/")) %>%
+  ggplot(aes(x=hgt, y=file, color = hgt_assign)) + geom_boxplot() +
+  facet_grid(cols = vars(randomseed))
+```
+
+```{r}
+saveRDS(DV, here("output","dependentVar.rds"))
 ```
 
 ```{r sessionInfo}
